# tower-defense

./: .gitignore  AI_USAGE.md  ARCHITECTURE.md  BACKEND_API.md  README.md  SECURITY.md  SPEC.md  docker-compose.prod.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: main.py  models.py  schemas.py
backend/app/api/: routes.py
backend/app/core/: config.py  db.py  deps.py
backend/app/data/levels/: endless.json
backend/app/services/: leaderboard.py  levels.py
backend/app/utils/: hash.py  nonce.py  security.py
backend/scripts/: bootstrap_db.py
backend/tests/: conftest.py  test_auth.py  test_score.py
frontend/: Dockerfile  index.html  nginx.conf  vite.config.ts
frontend/src/: main.ts  style.css  types.ts
frontend/src/api/: client.ts
frontend/src/config/: defaultLevel.ts
frontend/src/core/: game.ts  input.ts  stateMachine.ts
frontend/src/entities/: enemy.ts  tower.ts
frontend/src/logic/: waveGenerator.ts
frontend/src/map/: grid.ts
frontend/src/pathfinding/: aStar.ts
frontend/src/renderer/: canvasRenderer.ts
frontend/src/ui/: authModal.ts  overlay.ts
frontend/src/utils/: hash.ts
